--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<html lang = "en-US">
-
- <style>
+<html lang="en-US">
+ <head>
+  <style>
        body { 
             margin: 20px; 
             text-align: center;
@@ -11,96 +11,73 @@
             text-align: justify; 
             font-size: 20px; 
         } 
-    </style> 
- 
- <head>
-  <title>Assignment 01</title>
-  <h1>Assignment 01</h1>
-</head>
- <nav>
-  <a href="/index.html">Back</a>
- </nav>
-  
-  
-  <body>
-    <div>
-      <img src="/images/cats.jpg" alt ="cat icons" style ="width:350px;height:550px;float:left;margin:5px 25px 15px 0px" />
-     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus non nulla et purus ultricies molestie. Cras maximus auctor arcu, quis aliquet magna pharetra a. Vivamus dapibus nec sem at eleifend. Proin et tincidunt augue, ut varius est. Nulla rutrum sapien a ante tempor, id pharetra dui pellentesque. Fusce viverra libero eget orci vestibulum iaculis. Maecenas sit amet egestas augue, sed scelerisque ante.
-      Pellentesque iaculis tristique ligula, ac laoreet justo mollis eu. Sed vel neque tristique purus posuere pretium. Curabitur vitae neque eget risus porta semper. Integer pharetra at mauris a efficitur. Nunc imperdiet risus nec ex auctor, vel semper risus scelerisque. Donec sapien nisi, laoreet sed semper eu, fermentum ut velit. Phasellus elementum dui vitae placerat ultricies.
-      Etiam sed massa vel ipsum fermentum fringilla a in lectus. Vestibulum porta eget augue vel scelerisque. Cras sagittis, leo et convallis imperdiet, nisi justo sollicitudin metus, a viverra turpis urna vel dui. In sodales at nibh ut malesuada. Integer vel massa lobortis, vehicula felis eu, dictum velit. Donec varius sagittis turpis id pellentesque. Aenean sed sapien vel leo auctor molestie eu vitae enim. Fusce et lobortis libero. Maecenas non cursus risus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.
-      Sed ultricies euismod nibh, vitae ornare mi viverra id. Vestibulum egestas turpis at maximus sollicitudin. Proin est turpis, cursus in commodo eget, fermentum nec turpis. Quisque mollis tortor eget enim semper, eget vehicula tellus aliquet. Morbi et purus dictum ante sagittis congue. Pellentesque rhoncus ante in urna pharetra imperdiet. Fusce molestie venenatis augue, vel placerat enim fermentum et. Phasellus dui erat, fringilla at quam eget, finibus placerat nulla. Nunc imperdiet eleifend nisl vel gravida. Curabitur nec posuere nibh. Vestibulum sed aliquet risus, sit amet semper lacus. Donec auctor neque ac metus tempor, eu bibendum neque ullamcorper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus vitae justo nisi. Vestibulum vulputate ligula sit amet nisi interdum lobortis et eget mi. Pellentesque fringilla pellentesque accumsan.
-      Fusce at felis sed arcu vestibulum rutrum. Integer nec elementum diam, nec congue lacus. Nam vulputate id odio sit amet imperdiet. Proin elementum dolor at orci scelerisque tempus. Vestibulum eu enim ut purus tincidunt fermentum a vel urna. Donec volutpat nibh viverra lacinia vulputate. Aenean at augue nec enim viverra suscipit.
-     </p>
-    </div>
-     <hr style="height:3px;border-width:0;color:gray;background-color:gray">
-    <div>
-     <aside>
-      <img src="https://via.placeholder.com/200" alt ="placeholder" style="width:200px;height:200px;float:right;margin:5px 0px 15px 25px"/>
-     </aside>
-     <h2 style="text-align:left">Ut rutrum et quam ac</h2>
-     <p>
-      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque viverra cursus orci, vitae pellentesque orci aliquet ut. Mauris vestibulum lacus sed ultricies accumsan. In viverra nunc velit, vel auctor arcu imperdiet vitae. Curabitur pulvinar ante eu hendrerit lacinia. Nunc eu ex id ligula posuere suscipit. Nam lectus lorem, porttitor id tincidunt vitae, ultrices vel tellus. Ut placerat id eros et tempus. Etiam eu ante in ligula commodo posuere. Donec placerat volutpat neque sit amet fringilla. In bibendum neque massa, eu suscipit metus ornare quis. Suspendisse potenti. Suspendisse placerat convallis dolor, vitae dictum nulla rutrum quis. Integer consequat tempor felis in convallis. Etiam mattis ornare ipsum id sagittis. Ut pharetra velit eget egestas aliquet.
-      Fusce facilisis maximus diam nec mattis. Praesent velit ligula, congue sed massa eget, lacinia maximus tortor. Sed arcu augue, sollicitudin ac odio ac, volutpat pharetra augue. Etiam viverra bibendum metus, id dictum tortor commodo id. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent at mollis eros. Vivamus malesuada lacinia augue vitae convallis. Integer in augue porta, vestibulum eros quis, tincidunt libero. Proin eu gravida metus.
-      Mauris vestibulum vulputate ex nec molestie. Donec fringilla gravida diam in tempus. Maecenas id ipsum sodales, facilisis enim vel, blandit lorem. Phasellus tincidunt purus faucibus orci finibus gravida. Curabitur aliquam lorem purus. Proin justo eros, sollicitudin a justo nec, porttitor ultrices tortor. Praesent consequat nulla vitae neque semper, sed mattis nibh congue. Nunc congue consectetur risus, non sagittis enim pulvinar eu.
-      Duis mattis molestie risus, in bibendum sapien gravida pharetra. Phasellus sollicitudin pulvinar massa, a sagittis erat congue in. Duis nec aliquam dolor. Aliquam erat volutpat. Suspendisse aliquet magna ornare, aliquet purus vitae, suscipit ipsum. Aenean tristique urna a sodales semper. Sed laoreet, felis eu luctus blandit, ante dolor dignissim ex, vel scelerisque ipsum ante eu justo. Fusce ultricies sed lorem nec ornare. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras et elementum augue.
-      Cras at diam nunc. Aenean efficitur vehicula nisi id tincidunt. Sed venenatis nibh laoreet arcu vulputate consectetur. Etiam et maximus ipsum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer nec tellus convallis, posuere urna sit amet, cursus ligula. Mauris non aliquet sapien.
-     </p>   
-    </div>
-   <hr style="height:3px;border-width:0;color:gray;background-color:gray">
+    </style>  
+  <title>Assignment 01</title> 
+ </head>
+ <body>
+  <h1>Assignment 01</h1> 
+  <nav> 
+   <a href="/index.html" style="float:left">Back</a>
+   <a href="#" style="float:right">Next</a>
+  </nav>  
+  <div> 
+   <img src="/images/cats.jpg" alt="cat icons" style="width:350px;height:550px;float:left;margin:5px 25px 15px 0px" /> 
+   <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus non nulla et purus ultricies molestie. Cras maximus auctor arcu, quis aliquet magna pharetra a. Vivamus dapibus nec sem at eleifend. Proin et tincidunt augue, ut varius est. Nulla rutrum sapien a ante tempor, id pharetra dui pellentesque. Fusce viverra libero eget orci vestibulum iaculis. Maecenas sit amet egestas augue, sed scelerisque ante. Pellentesque iaculis tristique ligula, ac laoreet justo mollis eu. Sed vel neque tristique purus posuere pretium. Curabitur vitae neque eget risus porta semper. Integer pharetra at mauris a efficitur. Nunc imperdiet risus nec ex auctor, vel semper risus scelerisque. Donec sapien nisi, laoreet sed semper eu, fermentum ut velit. Phasellus elementum dui vitae placerat ultricies. Etiam sed massa vel ipsum fermentum fringilla a in lectus. Vestibulum porta eget augue vel scelerisque. Cras sagittis, leo et convallis imperdiet, nisi justo sollicitudin metus, a viverra turpis urna vel dui. In sodales at nibh ut malesuada. Integer vel massa lobortis, vehicula felis eu, dictum velit. Donec varius sagittis turpis id pellentesque. Aenean sed sapien vel leo auctor molestie eu vitae enim. Fusce et lobortis libero. Maecenas non cursus risus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed ultricies euismod nibh, vitae ornare mi viverra id. Vestibulum egestas turpis at maximus sollicitudin. Proin est turpis, cursus in commodo eget, fermentum nec turpis. Quisque mollis tortor eget enim semper, eget vehicula tellus aliquet. Morbi et purus dictum ante sagittis congue. Pellentesque rhoncus ante in urna pharetra imperdiet. Fusce molestie venenatis augue, vel placerat enim fermentum et. Phasellus dui erat, fringilla at quam eget, finibus placerat nulla. Nunc imperdiet eleifend nisl vel gravida. Curabitur nec posuere nibh. Vestibulum sed aliquet risus, sit amet semper lacus. Donec auctor neque ac metus tempor, eu bibendum neque ullamcorper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus vitae justo nisi. Vestibulum vulputate ligula sit amet nisi interdum lobortis et eget mi. Pellentesque fringilla pellentesque accumsan. Fusce at felis sed arcu vestibulum rutrum. Integer nec elementum diam, nec congue lacus. Nam vulputate id odio sit amet imperdiet. Proin elementum dolor at orci scelerisque tempus. Vestibulum eu enim ut purus tincidunt fermentum a vel urna. Donec volutpat nibh viverra lacinia vulputate. Aenean at augue nec enim viverra suscipit. </p> 
+  </div> 
+  <hr style="height:3px;border-width:0;color:gray;background-color:gray" /> 
+  <div> 
+   <aside> 
+    <img src="https://via.placeholder.com/200" alt="placeholder" style="width:200px;height:200px;float:right;margin:5px 0px 15px 25px" /> 
+   </aside> 
+   <h2 style="text-align:left">Ut rutrum et quam ac</h2> 
+   <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque viverra cursus orci, vitae pellentesque orci aliquet ut. Mauris vestibulum lacus sed ultricies accumsan. In viverra nunc velit, vel auctor arcu imperdiet vitae. Curabitur pulvinar ante eu hendrerit lacinia. Nunc eu ex id ligula posuere suscipit. Nam lectus lorem, porttitor id tincidunt vitae, ultrices vel tellus. Ut placerat id eros et tempus. Etiam eu ante in ligula commodo posuere. Donec placerat volutpat neque sit amet fringilla. In bibendum neque massa, eu suscipit metus ornare quis. Suspendisse potenti. Suspendisse placerat convallis dolor, vitae dictum nulla rutrum quis. Integer consequat tempor felis in convallis. Etiam mattis ornare ipsum id sagittis. Ut pharetra velit eget egestas aliquet. Fusce facilisis maximus diam nec mattis. Praesent velit ligula, congue sed massa eget, lacinia maximus tortor. Sed arcu augue, sollicitudin ac odio ac, volutpat pharetra augue. Etiam viverra bibendum metus, id dictum tortor commodo id. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent at mollis eros. Vivamus malesuada lacinia augue vitae convallis. Integer in augue porta, vestibulum eros quis, tincidunt libero. Proin eu gravida metus. Mauris vestibulum vulputate ex nec molestie. Donec fringilla gravida diam in tempus. Maecenas id ipsum sodales, facilisis enim vel, blandit lorem. Phasellus tincidunt purus faucibus orci finibus gravida. Curabitur aliquam lorem purus. Proin justo eros, sollicitudin a justo nec, porttitor ultrices tortor. Praesent consequat nulla vitae neque semper, sed mattis nibh congue. Nunc congue consectetur risus, non sagittis enim pulvinar eu. Duis mattis molestie risus, in bibendum sapien gravida pharetra. Phasellus sollicitudin pulvinar massa, a sagittis erat congue in. Duis nec aliquam dolor. Aliquam erat volutpat. Suspendisse aliquet magna ornare, aliquet purus vitae, suscipit ipsum. Aenean tristique urna a sodales semper. Sed laoreet, felis eu luctus blandit, ante dolor dignissim ex, vel scelerisque ipsum ante eu justo. Fusce ultricies sed lorem nec ornare. Interdum et malesuada fames ac ante ipsum primis in faucibus. Cras et elementum augue. Cras at diam nunc. Aenean efficitur vehicula nisi id tincidunt. Sed venenatis nibh laoreet arcu vulputate consectetur. Etiam et maximus ipsum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Integer nec tellus convallis, posuere urna sit amet, cursus ligula. Mauris non aliquet sapien. </p> 
+  </div> 
+  <hr style="height:3px;border-width:0;color:gray;background-color:gray" /> 
+  <div> 
+   <div style="float:left; width: 33%;"> 
+    <h3> Minimial HTML Example </h3> 
+    <code style="background-color:#b9baf4;"> &lt;!doctype html&gt; <br />&lt;html lang=&quot;en&quot;&gt; <br />&lt;head&gt; <br />&lt;title&gt;Minimial HTML&lt;/title&gt; <br />&lt;/head&gt; <br />&lt;body&gt; <br />&lt;p&gt;Hello, world&lt;/p&gt; <br />&lt;/body&gt; <br />&lt;/html&gt; </code> 
+   </div>
    
-   <div>
-    <div style="float:left; width: 33%;">
-    <h3> Minimial HTML Example </h3>
-    <code style="background-color:#b9baf4;">
-     &lt;!doctype html&gt;
-     <br>&lt;html lang=&quot;en&quot;&gt;
-     <br>&lt;head&gt;
-     <br>&lt;title&gt;Minimial HTML&lt;/title&gt;
-     <br>&lt;/head&gt;
-     <br>&lt;body&gt;
-     <br>&lt;p&gt;Hello, world&lt;/p&gt;
-     <br>&lt;/body&gt;
-     <br>&lt;/html&gt;
-    </code>
-    </div>
-    <div style="float:left; width: 33%;">
-     <h4> Table </h4>
-     <table style="width: 100%; border-color:#000000; height: 100%;" border="1">
-<tbody>
-<tr style="height: 21px;">
-<td style="height: 21px;">A</td>
-<td style="height: 21px;">H</td>
-<td style="height: 21px;">&nbsp;</td>
-</tr>
-<tr style="height: 21px;">
-<td style="height: 21px;">&nbsp;</td>
-<td style="height: 21px;">&nbsp;</td>
-<td style="height: 21px;">&nbsp;</td>
-</tr>
-<tr style="height: 21px;">
-<td style="height: 21px;">&nbsp;</td>
-<td style="height: 21px;">&nbsp;</td>
-<td style="height: 21px;">&nbsp;</td>
-</tr>
-</tbody>
-</table>
-    </div>
-    <div style="float:left; width: 33%;">
-            <h5>Enter for your chance to win a brand new Honda Civic!</h5>
-       <form>
-                <label for="fname">First name:</label><br>
-  <input type="text" id="fname" name="fname" value=""><br>
-  <label for="lname">Last name:</label><br>
-  <input type="text" id="lname" name="lname" value=""><br>
-  <label for="num">Phone Number:</label><br>
-  <input type="text" id="num" name="lname" value="000-000-0000">
- </form>
-    </div>       
-   </div>
-   <div>
-    <hr style="height:3px;border-width:0;color:gray;background-color:gray">
-   <h6> Last updated: 9/13/20 11:00 EST </h6>
-   </div>
-  </body>
+   <div style="float:left; width: 33%;"> 
+    <h4> Table </h4> 
+    <table style="width: 100%; border-color:#000000; height: 100%;" border="1"> 
+     <tbody> 
+      <tr style="height: 21px;"> 
+       <td style="height: 21px;">A</td> 
+       <td style="height: 21px;">H</td> 
+       <td style="height: 21px;">&nbsp;</td> 
+      </tr> 
+      <tr style="height: 21px;"> 
+       <td style="height: 21px;">&nbsp;</td> 
+       <td style="height: 21px;">&nbsp;</td> 
+       <td style="height: 21px;">&nbsp;</td> 
+      </tr> 
+      <tr style="height: 21px;"> 
+       <td style="height: 21px;">&nbsp;</td> 
+       <td style="height: 21px;">&nbsp;</td> 
+       <td style="height: 21px;">&nbsp;</td> 
+      </tr> 
+     </tbody> 
+    </table> 
+   </div> 
+   
+   <div style="float:left; width: 33%;"> 
+    <h5>Enter for your chance to win a brand new Honda Civic!</h5> 
+    <form> 
+     <label for="fname">First name:</label>
+     <br /> 
+     <input type="text" id="fname" name="fname" value="" />
+     <br /> 
+     <label for="lname">Last name:</label>
+     <br /> 
+     <input type="text" id="lname" name="lname" value="" />
+     <br /> 
+     <label for="num">Phone Number:</label>
+     <br /> 
+     <input type="text" id="num" name="lname" value="000-000-0000" /> 
+    </form> 
+   </div> 
+  </div>   
+ </body>
 </html>
