--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -10,7 +10,12 @@
         p { 
             text-align: justify; 
             font-size: 20px; 
-        } 
+        }
+   footer {
+    text-align: center;
+    padding: 3px;
+    background-color:#7b7ddc;
+   }
     </style>  
   <title>Assignment 01</title> 
  </head>
@@ -78,6 +83,10 @@
      <input type="text" id="num" name="lname" value="000-000-0000" /> 
     </form> 
    </div> 
-  </div>   
+  </div>
+  <footer>
+   <p> Author: Isabelle Johns </p>
+   <p> Last updated: 09/14/20 12:11 AM </p>
+  </footer>
  </body>
 </html>
