--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -15,6 +15,7 @@
     text-align: center;
     padding: 3px;
     background-color:#7b7ddc;
+    position: relative;
    }
     </style>  
   <title>Assignment 01</title> 
