--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -110,7 +110,8 @@ tr:nth-child(even) {
      <br /> 
      <input type="text" id="num" name="lname" value="000-000-0000" /> 
     </form> 
-   </div> 
+   </div>
+   <div><!-- This is a spacer for the end of the page--></div>
   </div>
  </body>
 </html>
