--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -3,7 +3,7 @@
  <head>
   <style>
        body { 
-            margin: 20px; 
+            margin: 20px 20px 20px 100px; 
             text-align: center;
             background-color:#bfc0ee;
         }
@@ -37,7 +37,7 @@ tr:nth-child(even) {
   <hr style="height:3px;border-width:0;"/>
   <div> 
    <img src="/images/cats.jpg" alt="cat icons" style="width:350px;height:550px;float:left;margin:5px 25px 15px 0px" />
-   <h3 style="text-align:left"> HTML Basics </h3>
+   <h3> HTML Basics </h3>
    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus non nulla et purus ultricies molestie. Cras maximus auctor arcu, quis aliquet magna pharetra a. Vivamus dapibus nec sem at eleifend. Proin et tincidunt augue, ut varius est. Nulla rutrum sapien a ante tempor, id pharetra dui pellentesque. Fusce viverra libero eget orci vestibulum iaculis. Maecenas sit amet egestas augue, sed scelerisque ante. Pellentesque iaculis tristique ligula, ac laoreet justo mollis eu. Sed vel neque tristique purus posuere pretium. Curabitur vitae neque eget risus porta semper. Integer pharetra at mauris a efficitur. Nunc imperdiet risus nec ex auctor, vel semper risus scelerisque. Donec sapien nisi, laoreet sed semper eu, fermentum ut velit. Phasellus elementum dui vitae placerat ultricies. Etiam sed massa vel ipsum fermentum fringilla a in lectus. Vestibulum porta eget augue vel scelerisque. Cras sagittis, leo et convallis imperdiet, nisi justo sollicitudin metus, a viverra turpis urna vel dui. In sodales at nibh ut malesuada. Integer vel massa lobortis, vehicula felis eu, dictum velit. Donec varius sagittis turpis id pellentesque. Aenean sed sapien vel leo auctor molestie eu vitae enim. Fusce et lobortis libero. Maecenas non cursus risus. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed ultricies euismod nibh, vitae ornare mi viverra id. Vestibulum egestas turpis at maximus sollicitudin. Proin est turpis, cursus in commodo eget, fermentum nec turpis. Quisque mollis tortor eget enim semper, eget vehicula tellus aliquet. Morbi et purus dictum ante sagittis congue. Pellentesque rhoncus ante in urna pharetra imperdiet. Fusce molestie venenatis augue, vel placerat enim fermentum et. Phasellus dui erat, fringilla at quam eget, finibus placerat nulla. Nunc imperdiet eleifend nisl vel gravida. Curabitur nec posuere nibh. Vestibulum sed aliquet risus, sit amet semper lacus. Donec auctor neque ac metus tempor, eu bibendum neque ullamcorper. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus vitae justo nisi. Vestibulum vulputate ligula sit amet nisi interdum lobortis et eget mi. Pellentesque fringilla pellentesque accumsan. Fusce at felis sed arcu vestibulum rutrum. Integer nec elementum diam, nec congue lacus. Nam vulputate id odio sit amet imperdiet. Proin elementum dolor at orci scelerisque tempus. Vestibulum eu enim ut purus tincidunt fermentum a vel urna. Donec volutpat nibh viverra lacinia vulputate. Aenean at augue nec enim viverra suscipit. </p> 
   </div> 
   <hr style="height:3px;border-width:0;color:gray;background-color:gray" /> 
