--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -112,7 +112,9 @@ tr:nth-child(even) {
      <input type="text" id="num" name="lname" value="000-000-0000" /> 
     </form> 
    </div>
-   <div style="width:100%;height:100px"> </div>
+  </div>
+  <div style="width:100%;height:100px">
+   <hr style="height:3px;border-width:0;color:gray;background-color:gray" /> 
   </div>
  </body>
 </html>
