--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -50,12 +50,12 @@ tr:nth-child(even) {
   </div> 
   <hr style="height:3px;border-width:0;color:gray;background-color:gray" /> 
   <div> 
-   <div style="float:left; width: 33%;"> 
+   <div style="width: 33%;"> 
     <h4> Minimial HTML Example </h4> 
     <code style="background-color:#7b7ddc;"> &lt;!doctype html&gt; <br />&lt;html lang=&quot;en&quot;&gt; <br />&lt;head&gt; <br />&lt;title&gt;Minimial HTML&lt;/title&gt; <br />&lt;/head&gt; <br />&lt;body&gt; <br />&lt;p&gt;Hello, world&lt;/p&gt; <br />&lt;/body&gt; <br />&lt;/html&gt; </code> 
    </div>
    
-   <div style="float:left; width: 33%;"> 
+   <div style="width: 33%;"> 
     <h4> HTML Table Example </h4>
     <table>
   <tr>
@@ -96,7 +96,7 @@ tr:nth-child(even) {
 </table>
    </div> 
    
-   <div style="float:left; width: 33%;"> 
+   <div style="width: 33%;"> 
     <h4> HTML Form Example </h4> 
     <form> 
      <label for="fname">First name:</label>
@@ -113,7 +113,7 @@ tr:nth-child(even) {
     </form> 
    </div>
   </div>
-  <div style="width:100%;height:100px">
+  <div style="width:100%;">
    <hr style="height:3px;border-width:0;color:gray;background-color:gray" /> 
   </div>
  </body>
