--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -25,6 +25,11 @@ td, th {
 tr:nth-child(even) {
   background-color: #7b7ddc;
 }
+   footer{
+    text-align: center;
+  padding: 3px;
+  background-color: acace6;
+   }
     </style>  
   <title>Assignment 01</title> 
  </head>
@@ -113,8 +118,10 @@ tr:nth-child(even) {
     </form> 
    </div>
   </div>
-  <div style="width:100%;">
-   <hr style="height:3px;border-width:0;color:gray;background-color:gray" /> 
-  </div>
+  <hr style="height:3px;border-width:0;color:gray;background-color:gray" />
+  <footer>
+   <p>Author: Isabelle Johns </p>
+   <p>Last Updated: 09/14/20 1:42AM </p>
+  </footer>
  </body>
 </html>
