--- a/assignments/assignment01.html
+++ b/assignments/assignment01.html
@@ -26,9 +26,8 @@ tr:nth-child(even) {
   background-color: #7b7ddc;
 }
    footer{
-    text-align: center;
   padding: 3px;
-  background-color: acace6;
+  background-color: #acace6;
    }
     </style>  
   <title>Assignment 01</title> 
@@ -120,8 +119,8 @@ tr:nth-child(even) {
   </div>
   <hr style="height:3px;border-width:0;color:gray;background-color:gray" />
   <footer>
-   <p>Author: Isabelle Johns </p>
-   <p>Last Updated: 09/14/20 1:42AM </p>
+   <p style = "text-align:center;font-size:10px;">Author: Isabelle Johns </p>
+   <p style = "text-align:center;font-size:10px;">Last Updated: 09/14/20 1:42AM </p>
   </footer>
  </body>
 </html>
